--- a/rails-app-deployment.yaml
+++ b/rails-app-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: rabadanapp-container
-          image: rabadanapp/rabadan_app_image:v2 # Замените на адрес вашего Docker-образа
+          image: rabadanapp/rabadan_app_image:latest # Замените на адрес вашего Docker-образа
           ports:
             - containerPort: 3000 # Порт, на котором ваше приложение слушает в контейнере
